// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DisplayCurrency > renders inside of model context 1`] = `
<DocumentFragment>
  <div
    class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(theme(fontSize.small)_+_10px)] is-filled"
    data-filled="true"
    data-filled-within="true"
    data-has-value="true"
    data-readonly="true"
    data-slot="base"
  >
    <div
      class="h-full flex flex-col"
      data-slot="main-wrapper"
    >
      <div
        class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-sm px-3 gap-3 bg-default-100 data-[hover=true]:bg-default-200 group-data-[focus=true]:bg-default-100 h-10 min-h-10 rounded-medium transition-background motion-reduce:transition-none !duration-150 outline-none group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background is-filled"
        data-slot="input-wrapper"
        style="cursor: text;"
      >
        <div
          class="inline-flex w-full items-center h-full box-border"
          data-slot="inner-wrapper"
        >
          <div
            class="pointer-events-none flex items-center"
          >
            <span
              class="text-default-400 text-small"
            >
              $
            </span>
          </div>
          <input
            aria-label="dummy"
            aria-readonly="true"
            autocomplete="off"
            class="w-full font-normal bg-transparent !outline-none placeholder:text-foreground-500 focus-visible:outline-none data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small group-data-[has-value=true]:text-default-foreground is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-start-content="true"
            data-slot="input"
            id="react-aria-:r1:"
            name="dummy"
            readonly=""
            title=""
            type="text"
            value="-"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DisplayCurrency > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div
    class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(theme(fontSize.small)_+_10px)] is-filled"
    data-filled="true"
    data-filled-within="true"
    data-has-value="true"
    data-readonly="true"
    data-slot="base"
  >
    <div
      class="h-full flex flex-col"
      data-slot="main-wrapper"
    >
      <div
        class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-sm px-3 gap-3 bg-default-100 data-[hover=true]:bg-default-200 group-data-[focus=true]:bg-default-100 h-10 min-h-10 rounded-medium transition-background motion-reduce:transition-none !duration-150 outline-none group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background is-filled"
        data-slot="input-wrapper"
        style="cursor: text;"
      >
        <div
          class="inline-flex w-full items-center h-full box-border"
          data-slot="inner-wrapper"
        >
          <div
            class="pointer-events-none flex items-center"
          >
            <span
              class="text-default-400 text-small"
            >
              $
            </span>
          </div>
          <input
            aria-label="dummy"
            aria-readonly="true"
            autocomplete="off"
            class="w-full font-normal bg-transparent !outline-none placeholder:text-foreground-500 focus-visible:outline-none data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small group-data-[has-value=true]:text-default-foreground is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-start-content="true"
            data-slot="input"
            id="react-aria-:r7:"
            name="dummy"
            readonly=""
            title=""
            type="text"
            value="-"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DisplayCurrency > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div
    class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(theme(fontSize.small)_+_10px)] is-filled"
    data-filled="true"
    data-filled-within="true"
    data-has-value="true"
    data-readonly="true"
    data-slot="base"
  >
    <div
      class="h-full flex flex-col"
      data-slot="main-wrapper"
    >
      <div
        class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-sm px-3 gap-3 bg-default-100 data-[hover=true]:bg-default-200 group-data-[focus=true]:bg-default-100 h-10 min-h-10 rounded-medium transition-background motion-reduce:transition-none !duration-150 outline-none group-data-[focus-visible=true]:z-10 group-data-[focus-visible=true]:ring-2 group-data-[focus-visible=true]:ring-focus group-data-[focus-visible=true]:ring-offset-2 group-data-[focus-visible=true]:ring-offset-background is-filled"
        data-slot="input-wrapper"
        style="cursor: text;"
      >
        <div
          class="inline-flex w-full items-center h-full box-border"
          data-slot="inner-wrapper"
        >
          <div
            class="pointer-events-none flex items-center"
          >
            <span
              class="text-default-400 text-small"
            >
              $
            </span>
          </div>
          <input
            aria-label="dummy"
            aria-readonly="true"
            autocomplete="off"
            class="w-full font-normal bg-transparent !outline-none placeholder:text-foreground-500 focus-visible:outline-none data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small group-data-[has-value=true]:text-default-foreground is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-start-content="true"
            data-slot="input"
            id="react-aria-:rd:"
            name="dummy"
            readonly=""
            title=""
            type="text"
            value="baz"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DisplayCurrency > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
